syntax = "proto3";
package management;

option go_package = "github.com/talos-systems/theila/api/rpc";

import "common/theila.proto";
import "google/protobuf/empty.proto";

message UpgradeInfoResponse {
  // FromVersion is the lowest detected Kubernetes version.
  string from_version = 1;
}

service ManagementService {
  rpc UpgradeInfo(google.protobuf.Empty) returns (UpgradeInfoResponse);
}

message UpgradeK8sSpec {
  // K8s version to upgrade from.
  string from_version = 1;
  // K8s version to upgrade to.
  string to_version = 2;
  // Context to use.
  common.Context context = 3;
}

message TaskStatusSpec {
  enum Phase {
    FAILED = 0;
    RUNNING = 1;
    COMPLETE = 2;
  }
  // Upgrade task state.
  Phase phase = 1;
  // Progress represents the task progress [0,1].
  float progress = 2;
  // Failure reason.
  string error = 3;
}

message TaskLogSpec {
  // Line represents a single log line.
  string line = 1;
}

message KubernetesVersionSpec {
  // Version kubernetes version.
  string version = 1;
}
